# vimmouse

./: README.md  accessibility.py  debug_keys.py  hint_overlay.py  hotkey.py  main.py  mouse.py  pyproject.toml  settings.py  setup.py  test_xrecord.py
.github/workflows/: build.yml  cleanup-artifacts.yml
docs/: mode_state_machine.md
tests/: test_accessibility.py  test_blocking.py  test_config.py  test_global_hotkeys.py  test_hints.py  test_launcher.py  test_mode_keybindings.py  test_mouse.py  test_watermark.py
vimlayer/: accessibility.py  config.py  hint_overlay.py  hotkey.py  launcher.py  main.py  mouse.py  settings.py  ui.py  window_manager.py
vimmouse/: accessibility.py  config.py  hint_overlay.py  launcher.py  main.py  mouse.py  settings.py  ui.py  window_manager.py
