[project]
name = "vimmouse"
version = "0.0.0"
description = "Vim-style UI element navigation for macOS"
requires-python = ">=3.13"
dependencies = [
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-ApplicationServices",
    "pyobjc>=12.1",
]

[dependency-groups]
dev = [
    "py2app",
    "setuptools",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"vimmouse/main.py" = ["E402"]

[project.scripts]
vimmouse = "vimmouse.main:main"

[tool.py2app]
app = ["vimmouse/main.py"]
argv_emulation = false
packages = [
    "objc",
    "AppKit",
    "Foundation",
    "Quartz",
    "CoreFoundation",
    "CoreText",
    "ApplicationServices",
    "HIServices",
    "PyObjCTools",
]

[tool.py2app.plist]
CFBundleName = "VimMouse"
CFBundleIdentifier = "com.vimmouse.app"
CFBundleVersion = "0.0.0"
CFBundleShortVersionString = "0.0.0"
LSUIElement = true
NSAccessibilityUsageDescription = "VimMouse needs Accessibility access to detect UI elements and simulate clicks."
